# slurm-job-queue-and-memory

./: README.md  pyproject.toml
docs/: architecture.md  decisions.md
scripts/: launch_gui.csh
src/slurm_mem_gui/: __init__.py  __main__.py
src/slurm_mem_gui/core/: __init__.py  config.py  db.py  memory_parser.py  slurm.py
src/slurm_mem_gui/ui/: __init__.py  job_picker.py  main_window.py  memory_plot.py
src/slurm_mem_gui/workers/: __init__.py  mem_sampler.py  slurm_list.py
