[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slurm-mem-gui"
version = "0.1.0"
description = "SLURM job memory visualiser — live MaxRSS per node vs time."
requires-python = ">=3.10,<3.11"
dependencies = [
    "PySide6>=6.4,<7",
    "pyqtgraph>=0.13,<1",
]

[project.scripts]
slurm-mem-gui = "slurm_mem_gui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/slurm_mem_gui"]
